samples/_failures_safe/1761185780_9becaf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93f17e82.c: In function ‘main’:
./samples/SAFE/__tmp_93f17e82.c:138:5: error: expected identifier or ‘(’ at end of input
  138 |     int
      |     ^~~
./samples/SAFE/__tmp_93f17e82.c:138:5: error: expected declaration or statement at end of input
